--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 jupyter = "^1.0.0"
 ipykernel = "^6.21.2"
+pandas = "^1.5.3"
+numpy = "^1.24.2"
 
 
 [build-system]
