--- a/DPV/pyproject.toml
+++ b/DPV/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.10"
 jupyter = "^1.0.0"
 ipykernel = "^6.21.2"
-pandas = "1.3.3"
+pandas = "^1.5.3"
 numpy = "^1.24.2"
 sqlalchemy = "^2.0.4"
 psycopg2-binary = "^2.9.5"
