--- a/Project/pyproject.toml
+++ b/Project/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["ICheered <tjeerd992@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 pandas = "^2.0.0"
 pandasql = "^0.7.3"
 pyarrow = "^11.0.0"
+ipykernel = "^6.22.0"
 
 
 [build-system]
