--- a/Project/pyproject.toml
+++ b/Project/pyproject.toml
@@ -11,6 +11,9 @@ pandas = "^2.0.0"
 pandasql = "^0.7.3"
 pyarrow = "^11.0.0"
 ipykernel = "^6.22.0"
+fastparquet = "^2023.2.0"
+matplotlib = "^3.7.1"
+tqdm = "^4.65.0"
 
 
 [build-system]
